tests/diagnostics/packages/import_bindings/duplicate_local_import_name_with_alias/expect.txt
# exit: 1
lib.coppice:2:37: error: duplicate imported name 'Shared'; use an alias
  import workspace/session { Token as Shared }
                                      ^
